--- a/NER.ipynb
+++ b/NER.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Assignment 2 - NLP - Week 3 - Named Entity Recognizer**\n",
+        "**Named Entity Recognizer**\n",
         "\n",
         "Instructions:\n",
         "\n",
